[package]
name = "qc_wasm"
version = "0.1.0"
authors = ["Steve Wacks <swacks@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"
pathfinding = "2.0.4"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.39"
features = [
  "CanvasRenderingContext2d",
  "Window",
  "Performance",
  ]
